# overwatch

./: .gitignore  CLAUDE.md  CODEBASE_ANALYSIS.md  OVERWATCH_IMPLEMENTATION_GUIDE.md  Overwatch-V2-Architecture-FULL-REVISED.md  QUICK_START_CHECKLIST.md  README.md  SECURITY.md  USER_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.sh
alembic/: env.py
alembic/versions/: 22c0f615c8c7_add_observations_table.py  612045ee84cf_initial_schema.py  v2_full_schema.py
data/engagements/10.10.11.94/: 20251114_121400_nmap.xml
docker/: Dockerfile  Dockerfile.api  Dockerfile.worker  docker-compose.training.yml
docs/: QUICKSTART.md
knowledge_base/tool_profiles/: nmap.yaml
knowledge_base/vulnerability_patterns/: idor.yaml  sql_injection.yaml  xss.yaml
scripts/: setup_tools.sh  start_flower.sh  start_worker.sh
src/overwatch/agents/: __init__.py  base_agent.py  factory.py
src/overwatch/api/: main.py
src/overwatch/coordinator/: __init__.py  budget_manager.py  coordinator.py  safety_controller.py  scope_enforcer.py  target_map.py
src/overwatch/learning/: feature_extraction.py  observation.py  observation_store.py
src/overwatch/memory/: __init__.py  credential_store.py  engagement_memory.py  knowledge_base.py  long_term_memory.py  working_memory.py
src/overwatch/observability/: __init__.py  evaluation.py  tracer.py  training_export.py
src/overwatch_core/: __init__.py  cli.py  config.py
tests/e2e/: test_api_to_database.py  test_full_pipeline.py
tests/integration/: test_scan_workflow.py
tests/unit/: test_v2_models.py
(+93 files in other folders)
