[tool.poetry]
name = "overwatch"
version = "0.1.0"
description = "AI-powered penetration testing platform"
authors = ["Atheeque <atheeque@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
anthropic = "^0.18.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
click = "^8.1.7"
aiofiles = "^23.2.1"
httpx = "^0.26.0"
celery = "^5.6.0"
redis = "^7.1.0"
flower = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"
bandit = "^1.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
